<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FD8E09">

                <TextView
                    android:id="@+id/numbers"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/numbers"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    tools:ignore="TextContrastCheck" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#388E3C">

                <TextView
                    android:id="@+id/family"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="2sp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/family_members"
                    android:textColor="@color/white"
                    android:textSize="34sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#9C27B0">

                <TextView
                    android:id="@+id/colors"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="2sp"
                    android:layout_marginTop="323dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/colors"
                    android:textColor="@color/white"
                    android:textSize="34sp" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00BCD4">

                <TextView
                    android:id="@+id/phrases"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_margin="2sp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/phrases"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    tools:ignore="TextContrastCheck" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>